delete ai from web

--- a/app/index.html
+++ b/app/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <base href="/app/">
+  <base href="/">
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="QuikxChat - Secure Matrix Messenger">
@@ -13,7 +13,7 @@
   <title>QuikxChat</title>
   <link rel="manifest" href="manifest.json">
   <script>
-    const serviceWorkerVersion = "400235099";
+    const serviceWorkerVersion = "2941035065";
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
