fix: Change web app link from app/ to /web/

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <a href="#features">Features</a>
                 <a href="#screenshots">Screenshots</a>
                 <a href="#download">Download</a>
-                <a href="app/" class="btn btn-primary web-app-btn">Web App</a>
+                <a href="/web/" class="btn btn-primary web-app-btn">Web App</a>
                 <div class="theme-toggle" id="theme-toggle">
                     <div class="theme-slider">
                         <span class="theme-icon">🌙</span>
@@ -239,7 +239,7 @@
                     </div>
                     <h3>Web</h3>
                     <p>Any browser</p>
-                    <a href="app/" class="btn btn-download">Open App</a>
+                    <a href="/web/" class="btn btn-download">Open App</a>
                 </div>
             </div>
         </div>
